src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    DECREMENT_SELF_ASSIGN_OPERATOR
    DOUBLETYPE
    INCREMENT_SELF_ASSIGN_OPERATOR
    INTTYPE
    METHOD
    NOT_EQUAL
    NUM
    PRINT
    RECORD_ARG
    RETURN
    STRINGTYPE
    WHILE

Grammar

Rule 0     S' -> codeLine
Rule 1     codeLine -> FOR LPAREN typesVarAsignation conditionProduction DOTCOMA operation RPAREN LCURLY_BRACKET codeLine RCURLY_BRACKET
Rule 2     operation -> ID DECREMENT_OPERATOR
Rule 3     operation -> DECREMENT_OPERATOR ID
Rule 4     operation -> INCREMENT_OPERATOR ID
Rule 5     operation -> ID INCREMENT_OPERATOR
Rule 6     operation -> ID operator ID
Rule 7     operation -> ID operator numericValue
Rule 8     operation -> numericValue operator ID
Rule 9     operator -> PLUS
Rule 10    operator -> MINUS
Rule 11    operator -> TIMES
Rule 12    operator -> DIVIDE
Rule 13    codeLine -> VAR ID EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
Rule 14    codeLine -> setTypes LESS_THAN OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
Rule 15    codeLine -> VAR ID EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA
Rule 16    codeLine -> setTypes LESS_THAN OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA
Rule 17    setTypes -> SETTYPE
Rule 18    setTypes -> HASHSETTYPE
Rule 19    setTypes -> LINKEDHASHSETTYPE
Rule 20    setTypes -> SPLAYTREESETTYPE
Rule 21    codeLine -> LIST OBJTYPE ID EQUALS LSBRACKET RSBRACKET DOTCOMA
Rule 22    codeLine -> LIST OBJTYPE ID EQUALS LIST OBJTYPE LPAREN RPAREN DOTCOMA
Rule 23    codeLine -> LIST OBJTYPE ID EQUALS LIST LPAREN RPAREN DOTCOMA
Rule 24    codeLine -> LIST OBJTYPE ID EQUALS LSBRACKET values RSBRACKET DOTCOMA
Rule 25    codeLine -> IF LPAREN conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
Rule 26    codeLine -> IF LPAREN conditionProduction RPAREN LCURLY_BRACKET
Rule 27    codeLine -> RCURLY_BRACKET
Rule 28    codeLine -> ELSE LCURLY_BRACKET RCURLY_BRACKET
Rule 29    codeLine -> IF LCURLY_BRACKET
Rule 30    codeLine -> ELSE IF LPAREN conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
Rule 31    codeLine -> ELSE IF LPAREN conditionProduction RPAREN LCURLY_BRACKET
Rule 32    codeLine -> types ID LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET RCURLY_BRACKET
Rule 33    codeLine -> types ID LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET
Rule 34    condition -> ID comparator ID
Rule 35    conditionProduction -> condition
Rule 36    conditionProduction -> condition logicalOperator conditionProduction
Rule 37    values -> value
Rule 38    values -> value COMA values
Rule 39    value -> numericValue
Rule 40    value -> STR
Rule 41    value -> TRUE
Rule 42    value -> FALSE
Rule 43    numericValue -> INT
Rule 44    numericValue -> DOUBLE
Rule 45    types -> VAR
Rule 46    types -> CONST
Rule 47    types -> FINAL
Rule 48    types -> VOID
Rule 49    types -> STATIC
Rule 50    types -> BOOL
Rule 51    typesVarProduction -> types ID
Rule 52    typesVarProduction -> types ID COMA typesVarProduction
Rule 53    typesVarAsignation -> types ID EQUALS value DOTCOMA
Rule 54    logicalOperator -> AND
Rule 55    logicalOperator -> OR
Rule 56    comparator -> GREATER_THAN
Rule 57    comparator -> GREATER_THAN_EQUAL
Rule 58    comparator -> LESS_THAN
Rule 59    comparator -> LESS_THAN_EQUAL
Rule 60    comparator -> EQUAL

Terminals, with rules where they appear

AND                  : 54
BOOL                 : 50
COLON                : 
COMA                 : 38 52
CONST                : 46
DECREMENT_OPERATOR   : 2 3
DECREMENT_SELF_ASSIGN_OPERATOR : 
DIVIDE               : 12
DOTCOMA              : 1 13 14 15 16 21 22 23 24 53
DOUBLE               : 44
DOUBLETYPE           : 
ELSE                 : 28 30 31
EQUAL                : 60
EQUALS               : 13 14 15 16 21 22 23 24 53
FALSE                : 42
FINAL                : 47
FOR                  : 1
GREATER_THAN         : 13 14 15 16 56
GREATER_THAN_EQUAL   : 57
HASHSETTYPE          : 18
ID                   : 2 3 4 5 6 6 7 8 13 14 15 16 21 22 23 24 32 33 34 34 51 52 53
IF                   : 25 26 29 30 31
INCREMENT_OPERATOR   : 4 5
INCREMENT_SELF_ASSIGN_OPERATOR : 
INT                  : 43
INTTYPE              : 
LCURLY_BRACKET       : 1 13 14 15 16 25 26 28 29 30 31 32 32 33 33
LESS_THAN            : 13 14 15 16 58
LESS_THAN_EQUAL      : 59
LINKEDHASHSETTYPE    : 19
LIST                 : 21 22 22 23 23 24
LPAREN               : 1 22 23 25 26 30 31 32 33
LSBRACKET            : 21 24
METHOD               : 
MINUS                : 10
NOT_EQUAL            : 
NUM                  : 
OBJTYPE              : 13 14 15 16 21 22 22 23 24
OR                   : 55
PLUS                 : 9
PRINT                : 
RCURLY_BRACKET       : 1 13 14 15 16 25 27 28 30 32 32 33
RECORD_ARG           : 
RETURN               : 
RPAREN               : 1 22 23 25 26 30 31 32 33
RSBRACKET            : 21 24
SETTYPE              : 17
SPLAYTREESETTYPE     : 20
STATIC               : 49
STR                  : 40
STRINGTYPE           : 
TIMES                : 11
TRUE                 : 41
VAR                  : 13 15 45
VOID                 : 48
WHILE                : 
error                : 

Nonterminals, with rules where they appear

codeLine             : 1 0
comparator           : 34
condition            : 35 36
conditionProduction  : 1 25 26 30 31 36
logicalOperator      : 36
numericValue         : 7 8 39
operation            : 1
operator             : 6 7 8
setTypes             : 14 16
types                : 32 33 51 52 53
typesVarAsignation   : 1
typesVarProduction   : 32 33 52
value                : 37 38 53
values               : 15 16 24 38

Parsing method: LALR

state 0

    (0) S' -> . codeLine
    (1) codeLine -> . FOR LPAREN typesVarAsignation conditionProduction DOTCOMA operation RPAREN LCURLY_BRACKET codeLine RCURLY_BRACKET
    (13) codeLine -> . VAR ID EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (14) codeLine -> . setTypes LESS_THAN OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (15) codeLine -> . VAR ID EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA
    (16) codeLine -> . setTypes LESS_THAN OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA
    (21) codeLine -> . LIST OBJTYPE ID EQUALS LSBRACKET RSBRACKET DOTCOMA
    (22) codeLine -> . LIST OBJTYPE ID EQUALS LIST OBJTYPE LPAREN RPAREN DOTCOMA
    (23) codeLine -> . LIST OBJTYPE ID EQUALS LIST LPAREN RPAREN DOTCOMA
    (24) codeLine -> . LIST OBJTYPE ID EQUALS LSBRACKET values RSBRACKET DOTCOMA
    (25) codeLine -> . IF LPAREN conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (26) codeLine -> . IF LPAREN conditionProduction RPAREN LCURLY_BRACKET
    (27) codeLine -> . RCURLY_BRACKET
    (28) codeLine -> . ELSE LCURLY_BRACKET RCURLY_BRACKET
    (29) codeLine -> . IF LCURLY_BRACKET
    (30) codeLine -> . ELSE IF LPAREN conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (31) codeLine -> . ELSE IF LPAREN conditionProduction RPAREN LCURLY_BRACKET
    (32) codeLine -> . types ID LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (33) codeLine -> . types ID LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET
    (17) setTypes -> . SETTYPE
    (18) setTypes -> . HASHSETTYPE
    (19) setTypes -> . LINKEDHASHSETTYPE
    (20) setTypes -> . SPLAYTREESETTYPE
    (45) types -> . VAR
    (46) types -> . CONST
    (47) types -> . FINAL
    (48) types -> . VOID
    (49) types -> . STATIC
    (50) types -> . BOOL

    FOR             shift and go to state 2
    VAR             shift and go to state 4
    LIST            shift and go to state 6
    IF              shift and go to state 7
    RCURLY_BRACKET  shift and go to state 3
    ELSE            shift and go to state 8
    SETTYPE         shift and go to state 10
    HASHSETTYPE     shift and go to state 11
    LINKEDHASHSETTYPE shift and go to state 12
    SPLAYTREESETTYPE shift and go to state 13
    CONST           shift and go to state 14
    FINAL           shift and go to state 15
    VOID            shift and go to state 16
    STATIC          shift and go to state 17
    BOOL            shift and go to state 18

    codeLine                       shift and go to state 1
    setTypes                       shift and go to state 5
    types                          shift and go to state 9

state 1

    (0) S' -> codeLine .



state 2

    (1) codeLine -> FOR . LPAREN typesVarAsignation conditionProduction DOTCOMA operation RPAREN LCURLY_BRACKET codeLine RCURLY_BRACKET

    LPAREN          shift and go to state 19


state 3

    (27) codeLine -> RCURLY_BRACKET .

    $end            reduce using rule 27 (codeLine -> RCURLY_BRACKET .)
    RCURLY_BRACKET  reduce using rule 27 (codeLine -> RCURLY_BRACKET .)


state 4

    (13) codeLine -> VAR . ID EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (15) codeLine -> VAR . ID EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA
    (45) types -> VAR .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 20

  ! ID              [ reduce using rule 45 (types -> VAR .) ]


state 5

    (14) codeLine -> setTypes . LESS_THAN OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (16) codeLine -> setTypes . LESS_THAN OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA

    LESS_THAN       shift and go to state 21


state 6

    (21) codeLine -> LIST . OBJTYPE ID EQUALS LSBRACKET RSBRACKET DOTCOMA
    (22) codeLine -> LIST . OBJTYPE ID EQUALS LIST OBJTYPE LPAREN RPAREN DOTCOMA
    (23) codeLine -> LIST . OBJTYPE ID EQUALS LIST LPAREN RPAREN DOTCOMA
    (24) codeLine -> LIST . OBJTYPE ID EQUALS LSBRACKET values RSBRACKET DOTCOMA

    OBJTYPE         shift and go to state 22


state 7

    (25) codeLine -> IF . LPAREN conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (26) codeLine -> IF . LPAREN conditionProduction RPAREN LCURLY_BRACKET
    (29) codeLine -> IF . LCURLY_BRACKET

    LPAREN          shift and go to state 23
    LCURLY_BRACKET  shift and go to state 24


state 8

    (28) codeLine -> ELSE . LCURLY_BRACKET RCURLY_BRACKET
    (30) codeLine -> ELSE . IF LPAREN conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (31) codeLine -> ELSE . IF LPAREN conditionProduction RPAREN LCURLY_BRACKET

    LCURLY_BRACKET  shift and go to state 25
    IF              shift and go to state 26


state 9

    (32) codeLine -> types . ID LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (33) codeLine -> types . ID LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET

    ID              shift and go to state 27


state 10

    (17) setTypes -> SETTYPE .

    LESS_THAN       reduce using rule 17 (setTypes -> SETTYPE .)


state 11

    (18) setTypes -> HASHSETTYPE .

    LESS_THAN       reduce using rule 18 (setTypes -> HASHSETTYPE .)


state 12

    (19) setTypes -> LINKEDHASHSETTYPE .

    LESS_THAN       reduce using rule 19 (setTypes -> LINKEDHASHSETTYPE .)


state 13

    (20) setTypes -> SPLAYTREESETTYPE .

    LESS_THAN       reduce using rule 20 (setTypes -> SPLAYTREESETTYPE .)


state 14

    (46) types -> CONST .

    ID              reduce using rule 46 (types -> CONST .)


state 15

    (47) types -> FINAL .

    ID              reduce using rule 47 (types -> FINAL .)


state 16

    (48) types -> VOID .

    ID              reduce using rule 48 (types -> VOID .)


state 17

    (49) types -> STATIC .

    ID              reduce using rule 49 (types -> STATIC .)


state 18

    (50) types -> BOOL .

    ID              reduce using rule 50 (types -> BOOL .)


state 19

    (1) codeLine -> FOR LPAREN . typesVarAsignation conditionProduction DOTCOMA operation RPAREN LCURLY_BRACKET codeLine RCURLY_BRACKET
    (53) typesVarAsignation -> . types ID EQUALS value DOTCOMA
    (45) types -> . VAR
    (46) types -> . CONST
    (47) types -> . FINAL
    (48) types -> . VOID
    (49) types -> . STATIC
    (50) types -> . BOOL

    VAR             shift and go to state 30
    CONST           shift and go to state 14
    FINAL           shift and go to state 15
    VOID            shift and go to state 16
    STATIC          shift and go to state 17
    BOOL            shift and go to state 18

    typesVarAsignation             shift and go to state 28
    types                          shift and go to state 29

state 20

    (13) codeLine -> VAR ID . EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (15) codeLine -> VAR ID . EQUALS LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA

    EQUALS          shift and go to state 31


state 21

    (14) codeLine -> setTypes LESS_THAN . OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (16) codeLine -> setTypes LESS_THAN . OBJTYPE GREATER_THAN ID EQUALS LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA

    OBJTYPE         shift and go to state 32


state 22

    (21) codeLine -> LIST OBJTYPE . ID EQUALS LSBRACKET RSBRACKET DOTCOMA
    (22) codeLine -> LIST OBJTYPE . ID EQUALS LIST OBJTYPE LPAREN RPAREN DOTCOMA
    (23) codeLine -> LIST OBJTYPE . ID EQUALS LIST LPAREN RPAREN DOTCOMA
    (24) codeLine -> LIST OBJTYPE . ID EQUALS LSBRACKET values RSBRACKET DOTCOMA

    ID              shift and go to state 33


state 23

    (25) codeLine -> IF LPAREN . conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (26) codeLine -> IF LPAREN . conditionProduction RPAREN LCURLY_BRACKET
    (35) conditionProduction -> . condition
    (36) conditionProduction -> . condition logicalOperator conditionProduction
    (34) condition -> . ID comparator ID

    ID              shift and go to state 36

    conditionProduction            shift and go to state 34
    condition                      shift and go to state 35

state 24

    (29) codeLine -> IF LCURLY_BRACKET .

    $end            reduce using rule 29 (codeLine -> IF LCURLY_BRACKET .)
    RCURLY_BRACKET  reduce using rule 29 (codeLine -> IF LCURLY_BRACKET .)


state 25

    (28) codeLine -> ELSE LCURLY_BRACKET . RCURLY_BRACKET

    RCURLY_BRACKET  shift and go to state 37


state 26

    (30) codeLine -> ELSE IF . LPAREN conditionProduction RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (31) codeLine -> ELSE IF . LPAREN conditionProduction RPAREN LCURLY_BRACKET

    LPAREN          shift and go to state 38


state 27

    (32) codeLine -> types ID . LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (33) codeLine -> types ID . LPAREN LCURLY_BRACKET typesVarProduction RCURLY_BRACKET RPAREN LCURLY_BRACKET

    LPAREN          shift and go to state 39


state 28

    (1) codeLine -> FOR LPAREN typesVarAsignation . conditionProduction DOTCOMA operation RPAREN LCURLY_BRACKET codeLine RCURLY_BRACKET
    (35) conditionProduction -> . condition
    (36) conditionProduction -> . condition logicalOperator conditionProduction
    (34) condition -> . ID comparator ID

    ID              shift and go to state 36

    conditionProduction            shift and go to state 40
    condition                      shift and go to state 35

state 29

    (53) typesVarAsignation -> types . ID EQUALS value DOTCOMA

    ID              shift and go to state 41


state 30

    (45) types -> VAR .

    ID              reduce using rule 45 (types -> VAR .)


state 31

    (13) codeLine -> VAR ID EQUALS . LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (15) codeLine -> VAR ID EQUALS . LESS_THAN OBJTYPE GREATER_THAN LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA

    LESS_THAN       shift and go to state 42


state 32

    (14) codeLine -> setTypes LESS_THAN OBJTYPE . GREATER_THAN ID EQUALS LCURLY_BRACKET RCURLY_BRACKET DOTCOMA
    (16) codeLine -> setTypes LESS_THAN OBJTYPE . GREATER_THAN ID EQUALS LCURLY_BRACKET values RCURLY_BRACKET DOTCOMA

    GREATER_THAN    shift and go to state 43


state 33

    (21) codeLine -> LIST OBJTYPE ID . EQUALS LSBRACKET RSBRACKET DOTCOMA
    (22) codeLine -> LIST OBJTYPE ID . EQUALS LIST OBJTYPE LPAREN RPAREN DOTCOMA
    (23) codeLine -> LIST OBJTYPE ID . EQUALS LIST LPAREN RPAREN DOTCOMA
    (24) codeLine -> LIST OBJTYPE ID . EQUALS LSBRACKET values RSBRACKET DOTCOMA

    EQUALS          shift and go to state 44


state 34

    (25) codeLine -> IF LPAREN conditionProduction . RPAREN LCURLY_BRACKET RCURLY_BRACKET
    (26) codeLine -> IF LPAREN conditionProduction . RPAREN LCURLY_BRACKET

    RPAREN          shift and go to state 45


state 35

    (35) conditionProduction -> condition .
    (36) conditionProduction -> condition . logicalOperator conditionProduction
    (54) logicalOperator -> . AND
    (55) logicalOperator -> . OR

    RPAREN          reduce using rule 35 (conditionProduction -> condition .)
    DOTCOMA         reduce using rule 35 (conditionProduction -> condition .)
    AND             shift and go to state 47
    OR              shift and go to state 48

    logicalOperator                shift and go to state 46

state 36

    (34) condition -> ID . comparator ID
    (56) comparator -> . GREATER_THAN
    (57) comparator -> . GREATER_THAN_EQUAL
    (58) comparator -> . LESS_THAN
    (59) comparator -> . LESS_THAN_EQUAL
    (60) comparator -> . EQUAL

    GREATER_THAN    shift and go to state 50
    GREATER_THAN_EQUAL shift and go to state 51
    LESS_THAN       shift and go to state 52
    LESS_THAN_EQUAL shift and go to state 53
    EQUAL           shift and go to state 54

    comparator                     shift and go to state 49

state 37

    (28) codeLine -> ELSE LCURLY_BRACKET RCURLY_BRACKET .

    $end            reduce using rule 28 (codeLine -> ELSE LCURLY_BRACKET RCURLY_BRACKET .)
    RCURLY_BRACKET  reduce using rule 28 (codeLine -> ELSE LCURLY_BRACKET RCURLY_BRACKET .)


state 38
